add get stages
